Chamber of Commerce v3.6 - Removed stray div on line 126; fixed contrast issue on curren-menu-item

--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -136,7 +136,6 @@ div.nav-links-wrapper {
 }
 
 
-
 div.nav-links-wrapper a {
     font-size: 1rem;
 }
@@ -216,10 +215,7 @@ nav.menuLinks ul li a {
     transition: background-color 0.3s ease-in;
 }
 
-.current-menu-item {
-    /* background-color: rgba(0, 0, 0, 0.2); */
-    background-color: var(--primary-color);
-}
+
 
 
 /* ================= HERO IMAGE ================= */
